--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "bootstrap": "^4.5.3",
+    "fetch-intercept": "^2.3.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "simplebar-react": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
