--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -13,9 +17,12 @@
     "react-calendar": "^3.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-fontawesome": "^1.7.1",
+    "react-google-charts": "^3.0.15",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
     "simplebar-react": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
