--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "fetch-intercept": "^2.3.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-calendar": "^3.2.0",
     "react-custom-scrollbars": "^4.2.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-google-charts": "^3.0.15",
